Fix "No update" text covered by Searchbox
+ aligned it to search box placeholder text

--- a/Profile Folder/chrome/styles/partials/content/firefox/pages/chrome-21/about-addons/_final.scss
+++ b/Profile Folder/chrome/styles/partials/content/firefox/pages/chrome-21/about-addons/_final.scss
@@ -29,6 +29,11 @@
 		z-index: 1;
 	}
 
+	#updates-message {
+		margin-inline-end: 160px;
+		margin-top: 5px;
+	}
+
 	.main-heading {
 		pointer-events: all !important;
 	}
